--- a/src/views/Transactions/Balance/Balance.module.scss
+++ b/src/views/Transactions/Balance/Balance.module.scss
@@ -22,14 +22,14 @@
     .balance__label {
       color: var(--gold-darker);
       font-size: var(--font-size-md);
-      font-weight: var(--font-weight-semibold);
+      font-weight: var(--font-weight-bold);
       line-height: var(--line-height-simple);
       margin-right: var(--spacing-tiny);
     }
 
     .balance__value {
       font-size: var(--font-size-lg);
-      font-weight: var(--font-weight-semibold);
+      font-weight: var(--font-weight-bold);
       line-height: var(--line-height-simple);
 
       &.balance__positive {
@@ -92,14 +92,14 @@
         .results__label {
           color: var(--gold-darker);
           font-size: var(--font-size-xs);
-          font-weight: var(--font-weight-semibold);
+          font-weight: var(--font-weight-bold);
           line-height: var(--line-height-simple);
           margin-bottom: var(--spacing-nano);
         }
 
         .results__value {
           font-size: var(--font-size-sm);
-          font-weight: var(--font-weight-semibold);
+          font-weight: var(--font-weight-bold);
           line-height: var(--line-height-simple);
           color: var(--color-success);
         }
