--- a/src/views/Transactions/Transaction/Transaction.module.scss
+++ b/src/views/Transactions/Transaction/Transaction.module.scss
@@ -24,7 +24,7 @@
     .transaction__header {
       color: var(--gold-darker);
       font-size: var(--font-size-md);
-      font-weight: var(--font-weight-semibold);
+      font-weight: var(--font-weight-bold);
       line-height: var(--line-height-md);
       margin-bottom: var(--spacing-tiny);
       overflow: hidden;
@@ -41,7 +41,7 @@
       .transaction__value {
         color: var(--gold-darkest);
         font-size: var(--font-size-sm);
-        font-weight: var(--font-weight-semibold);
+        font-weight: var(--font-weight-bold);
         line-height: var(--line-height-simple);
       }
 
